2001-02-20  Andrew Cagney  <ac131313@redhat.com>

	* mips-tdep.c (do_fp_register_row, do_fp_register_row): Fix printf
	formatting.

2001-02-20  Kevin Buettner  <kevinb@redhat.com>

	* solib-aix5.c (solib-svr4.h): Remove include.
	(solib_break_names): Delete names which aren't actually
	used by AIX5.
	(bkpt_names): Remove.
	(aix5_relocate_main_executable, bfd_lookup_symbol): Replace calls
	to STREQ() with equivalent calls to strcmp().
	(in_svr4_dynsym_resolve_code, enable_break, bfd_lookup_symbol,
	aix5_solib_create_inferior_hook): Revise comments.
	(enable_break): Remove old ``bkpt_names'' code.

2001-02-19  Andrew Cagney  <ac131313@redhat.com>

	* Makefile.in (SFILES): Add frame.c .
	(COMMON_OBS): Add frame.o .
	(frame.o): New target.

	* frame.c (find_saved_register): 
	(default_get_saved_register): 
	(get_saved_register): 
	(read_relative_register_raw_bytes_for_frame): 
	(read_relative_register_raw_bytes): Moved to here.
	* regcache.c: From here.

2001-02-20  Kevin Buettner  <kevinb@redhat.com>

	* solib-aix5.c: New file.

2001-02-20  Martin M. Hunt  <hunt@redhat.com>

	* solib.c (info_sharedlibrary_command): Don't assume pointers
	are the same size of long, call	longest_local_hex_string_custom().

	* solib-svr4.c (LM_ADDR): LM_ADDR is a signed offset, so
	extract_signed_integer() should be called instead of
	extract_address().

2001-02-20  Martin M. Hunt  <hunt@redhat.com>	
	
	* MAINTAINERS: Add Martin Hunt to Write After Approval list.

2001-02-19  Andrew Cagney  <ac131313@redhat.com>

	Frm 2001-02-09 Jim Kingdon <jkingdon@engr.sgi.com>:
	* mips-tdep.c (mips_register_raw_size): If FP_REGISTER_DOUBLE,
	then floating point registers are 8 bytes.

2001-02-19  Michael Snyder  <msnyder@mvstp600e.cygnus.com>

	* parse.c (write_exp_msymbol): Make the type CORE_ADDR, to 
	accomodate 64-bit addresses.

2001-02-19  Elena Zannoni  <ezannoni@kwikemart.cygnus.com>

	From Peter Schauer <Peter.Schauer@regent.e-technik.tu-muenchen.de>