@@ -5,7 +5,7 @@ XDEPFILES=
 
 NAT_FILE= nm-linux.h
 NATDEPFILES= infptrace.o inftarg.o fork-child.o corelow.o \
-	core-aout.o core-regset.o ia64-linux-nat.o linux-thread.o lin-thread.o
+	core-aout.o core-regset.o ia64-linux-nat.o thread-db.o lin-lwp.o
 
 LOADLIBES = -ldl -rdynamic
 
