@@ -75,4 +75,20 @@ extern int ia64_linux_insert_watchpoint (int pid, CORE_ADDR addr,
   ia64_linux_remove_watchpoint (inferior_pid, addr, len)
 extern int ia64_linux_remove_watchpoint (int pid, CORE_ADDR addr, int len);
 
+/* FIXME: kettenis/2000-09-03: This should be moved to ../nm-linux.h
+   once we have converted all Linux targets to use the new threads
+   stuff (without the #undef of course).  */
+
+extern int lin_lwp_prepare_to_proceed (void);
+#undef PREPARE_TO_PROCEED
+#define PREPARE_TO_PROCEED(select_it) lin_lwp_prepare_to_proceed ()
+
+extern void lin_lwp_attach_lwp (int pid, int verbose);
+#define ATTACH_LWP(pid, verbose) lin_lwp_attach_lwp ((pid), (verbose))
+
+#include <signal.h>
+
+extern void lin_thread_get_thread_signals (sigset_t *mask);
+#define GET_THREAD_SIGNALS(mask) lin_thread_get_thread_signals (mask)
+
 #endif /* #ifndef NM_LINUX_H */
